# pyrograph

./: LICENSE  README.md  pyproject.toml
graphs/: model.json
pyrograph/: circle.py  line.py  main.py  pyrograph.code-workspace  pyrograph.py  rotor.py  stator.py
pyrograph/examples/3rotors/: model.json
pyrograph/model/: circle.py  model.py  pyrograph.py  rotor.py  stator.py
pyrograph/ui/: ui.py
